# LibreWXR

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  README.md  docker-compose.multiworker.yml  docker-compose.yml  pyproject.toml
.github/: FUNDING.yml
docs/: adding-a-source.md  configuration-reference.md  coverage.md  rainviewer-migration-guide.md  satellite-implementation-plan.md  source-survey.md  web-integration-guide.md
examples/: leaflet.html  maplibre.html
examples/live-demo/: leaflet.html  maplibre.html
scripts/: auto-update.sh  generate_coverage_map.py  refresh_dpc_coverage.py  refresh_jma_coverage.py
src/librewxr/: config.py  data_pipeline.py  main.py
src/librewxr/api/: routes.py
src/librewxr/colors/: color_table.csv  schemes.py
src/librewxr/data/: arome_antilles_grid.py  coverage.py  dmi_dini_grid.py  ecmwf_grid.py  ecmwf_interpolation.py  fetcher.py  hrrr_alaska_grid.py  hrrr_grid.py  mmd_source.py  nowcast.py  nwp_interpolation.py  nwp_source.py  radar_cache.py  radar_stations.py  regions.py  sources.py  store.py  wrf_smn_grid.py
src/librewxr/sources/: __init__.py  _base.py  _helpers.py
src/librewxr/sources/regional/caribbean/nwp/arome_antilles/: grid.py
src/librewxr/sources/regional/central_america/el_salvador/radar/marn/: README.md  __init__.py  source.py  stations.py
src/librewxr/sources/regional/east_asia/japan/: __init__.py
src/librewxr/sources/regional/east_asia/japan/radar/: __init__.py
src/librewxr/sources/regional/east_asia/japan/radar/jma/: __init__.py  decoder.py  jpcomp_coverage.geojson  regions.py  source.py  stations.py
src/librewxr/sources/regional/east_asia/taiwan/radar/cwa/: README.md  __init__.py  source.py  stations.py
src/librewxr/sources/regional/europe/italy/radar/dpc/: __init__.py  dpc_coverage.geojson  stations.py
src/librewxr/sources/regional/europe/nwp/dmi_dini/: grid.py
src/librewxr/sources/regional/europe/nwp/icon_eu/: grid.py
src/librewxr/sources/regional/europe/radar/opera/: README.md  __init__.py  source.py  stations.py
src/librewxr/sources/regional/north_america/canada/nwp/hrdps/: grid.py
src/librewxr/sources/regional/north_america/canada/radar/msc_canada/: README.md  __init__.py  source.py  stations.py
src/librewxr/sources/regional/north_america/usa/nwp/hrrr/: grid.py
src/librewxr/sources/regional/north_america/usa/nwp/hrrr_alaska/: grid.py
src/librewxr/sources/regional/north_america/usa/radar/: __init__.py  stations.py
src/librewxr/sources/regional/north_america/usa/radar/iem/: __init__.py
src/librewxr/sources/regional/north_america/usa/radar/mrms/: README.md  __init__.py  source.py  stations.py
src/librewxr/sources/regional/oceania/nwp/arome_ncaled/: __init__.py
src/librewxr/sources/regional/oceania/nwp/arome_polyn/: __init__.py
src/librewxr/sources/regional/southeast_asia/malaysia/radar/mmd/: README.md  __init__.py  stations.py
src/librewxr/sources/satellite/: __init__.py
src/librewxr/sources/satellite/gmgsi/: __init__.py  source.py
src/librewxr/sources/world/ifs/: __init__.py
src/librewxr/tiles/: coordinates.py  renderer.py  request_tracker.py  satellite_renderer.py  warmer.py
tests/: test_alerts.py  test_arome_antilles_grid.py  test_color_schemes.py  test_cwa.py  test_data_pipeline.py  test_dmi_dini_grid.py  test_ecmwf_grid.py  test_ecmwf_interpolation.py  test_fetcher.py  test_gmgsi_composite_renderer.py  test_hrrr_alaska_grid.py  test_hrrr_grid.py  test_jma.py  test_marn.py  test_mmd.py  test_mrms.py  test_mss.py  test_nowcast.py  test_persistence.py  test_radar_cache.py  test_renderer.py  test_request_tracker.py  test_satellite_gmgsi.py  test_sources_discovery.py  test_wrf_smn_grid.py
