[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "librewxr"
version = "0.1.0"
description = "Self-hostable Rain Viewer API replacement using NEXRAD radar data"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "httpx>=0.28",
    "rich>=13.0",
    "numpy>=2.0",
    "Pillow>=11.0",
    "pydantic-settings>=2.7",
    "h5py>=3.10",
    "psutil>=7.2.2",
    "omfiles[fsspec,grids]>=0.4",
    "earthkit-regrid>=0.4",
    "s3fs>=2024.0",
    "opencv-python-headless>=4.8",
    "cfgrib>=0.9.14",
    "xarray>=2024.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.25",
    "httpx",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "api: API endpoint tests",
    "ecmwf: ECMWF grid, interpolation, and fallback rendering tests",
    "nowcast: Precipitation nowcasting tests",
    "sources: Radar source parsing tests (Canada, OPERA)",
    "tiles: Tile rendering, coordinates, and color scheme tests",
    "store: Frame store and tile cache tests",
    "hrrr: HRRR grid, projection, and fetch tests",
    "icon_eu: ICON-EU grid, lat/lon, and fetch tests",
    "dmi_dini: DMI HARMONIE-AROME DINI grid, LCC, and fetch tests",
]
