[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "librewxr"
version = "0.1.0"
description = "Self-hostable Rain Viewer API replacement using NEXRAD radar data"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "httpx>=0.28",
    "rich>=13.0",
    "numpy>=2.0",
    "Pillow>=11.0",
    "pydantic-settings>=2.7",
    "h5py>=3.10",
    "psutil>=7.2.2",
    "omfiles[fsspec,grids]>=0.4",
    "earthkit-regrid>=0.4",
    "s3fs>=2024.0",
    # Pinned to match aiobotocore's allowed botocore range.  Without these
    # pins, an installed ``awscli`` (or any other package with a hard
    # ``botocore==X`` pin newer than aiobotocore's ceiling) will drag
    # botocore forward and break the ECMWF IFS S3 fetch path with
    # ``TypeError: ... compute_endpoint_resolver_builtin_defaults()``.
    # See aiobotocore release notes for compatible (botocore, aiobotocore)
    # ranges before bumping these.
    "aiobotocore>=3.5,<3.7",
    "botocore>=1.42.90,<1.43.1",
    "opencv-python-headless>=4.8",
    "cfgrib>=0.9.14",
    "xarray>=2024.1.0",
    # NetCDF4 backend for xarray.open_dataset — required by the GMGSI
    # satellite source (NESDIS publishes hourly mosaics as NetCDF-4).
    # PyPI wheels bundle HDF5/NetCDF C libs, so no system packages needed.
    "netCDF4>=1.7",
    "lxml>=5.0",
    "shapely>=2.0",
    # GeoTIFF decoder for the DPC Italian radar source (Cloud-Optimized
    # GeoTIFF with LZW compression).  ``imagecodecs`` is required for
    # LZW decode; ``tifffile`` is the pure-Python COG reader on top.
    "tifffile>=2024.0",
    "imagecodecs>=2024.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.25",
    "httpx",
]
# Coverage-map authoring deps.  Not needed at runtime — only when
# regenerating the PNGs under ``docs/coverage-map-*.png`` via
# ``scripts/generate_coverage_map.py``.  Kept as an optional extra so
# the main runtime install isn't bloated by matplotlib / pyproj for
# operators who never touch the authoring path.
maps = [
    "matplotlib>=3.8",
    "pyproj>=3.6",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "api: API endpoint tests",
    "ecmwf: ECMWF grid, interpolation, and fallback rendering tests",
    "nowcast: Precipitation nowcasting tests",
    "sources: Radar source parsing tests (Canada, OPERA)",
    "tiles: Tile rendering, coordinates, and color scheme tests",
    "store: Frame store and tile cache tests",
    "hrrr: HRRR grid, projection, and fetch tests",
    "hrrr_alaska: HRRR-Alaska polar stereographic grid and fetch tests",
    "icon_eu: ICON-EU grid, lat/lon, and fetch tests",
    "dmi_dini: DMI HARMONIE-AROME DINI grid, LCC, and fetch tests",
    "hrdps: HRDPS rotated lat/lon grid and fetch tests",
    "arome_antilles: Météo-France AROME Antilles regular lat/lon grid and fetch tests",
    "arome_guyane: Météo-France AROME Guyane regular lat/lon grid tests",
    "arome_indien: Météo-France AROME Indien (Réunion/Mayotte/Madagascar) regular lat/lon grid tests",
    "arome_ncaled: Météo-France AROME Nouvelle-Calédonie regular lat/lon grid tests",
    "arome_polyn: Météo-France AROME Polynésie française regular lat/lon grid tests",
    "wrf_smn: SMN Argentina WRF-DET LCC grid and NetCDF4 decode tests",
    "alerts: WMO CAP weather alerts tests",
]
